--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -127,3 +127,11 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+/* base */
+.el-breadcrumb {
+  margin-bottom: 20px;
+}
+.el-table {
+  margin-top: 20px;
+}
